chore: simplify local environment setup
Set up the cockroachdb cluster in single node cluster mode so we only
need one instance of it. This also adds the database initialization as a
docker entrypoint script in `database_entrypoint/a.sql`. This removes
the need to manually connect and initialize the database schema when
brining this up locally. Files in this directory are mounted to the
roach1 db container's docker-entrypoint directory and are executed
automatically in alphabetical order.

Added a .dockerignore file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,33 +10,8 @@ services:
       - 8080:8080
     volumes:
       - roach1-data:/cockroach/cockroach-data
-    command: "start --insecure --join=roach1,roach2,roach3"
-    healthcheck:
-      test: [ "curl", "http://localhost:8080/health" ]
-      interval: 1m30s
-      timeout: 30s
-      retries: 5
-      start_period: 30s
-  roach2:
-    image: cockroachdb/cockroach:v22.1.10
-    networks:
-      - roachnet
-    volumes:
-      - roach2-data:/cockroach/cockroach-data
-    command: "start --insecure --join=roach1,roach2,roach3"
-    healthcheck:
-      test: [ "curl", "http://localhost:8080/health" ]
-      interval: 1m30s
-      timeout: 30s
-      retries: 5
-      start_period: 30s
-  roach3:
-    image: cockroachdb/cockroach:v22.1.10
-    networks:
-      - roachnet
-    volumes:
-      - roach3-data:/cockroach/cockroach-data
-    command: "start --insecure --join=roach1,roach2,roach3"
+      - ./database_entrypoint/:/docker-entrypoint-initdb.d/
+    command: "start-single-node --insecure"
     healthcheck:
       test: [ "curl", "http://localhost:8080/health" ]
       interval: 1m30s
@@ -62,5 +37,3 @@ networks:
 
 volumes:
   roach1-data:
-  roach2-data:
-  roach3-data:
